# mypowercoach

./: .env.example  pyproject.toml
.vendor/email_validator-2.3.0.dist-info/: RECORD
.vendor/fastapi-0.135.2.dist-info/: RECORD
.vendor/uvicorn-0.42.0.dist-info/: RECORD
app/: __init__.py  bootstrap.py  dependencies.py  main.py
app/api/: router.py
app/api/routes/: athletes.py  auth.py  coaching.py  programs.py
app/api/schemas/: athlete.py  auth.py  coaching.py  video_analysis.py
app/application/use_cases/: account.py  athlete_onboarding.py  coaching.py
app/core/: config.py
app/domain/models/: account.py  athlete.py  coaching.py  exercise.py  program.py  video_analysis.py
app/domain/repositories/: __init__.py  account_repository.py  athlete_repository.py
app/domain/services/: athlete_profiler.py  bench_video_analyzer.py  coach_chat.py  deadlift_video_analyzer.py  exercise_selector.py  feedback_composer.py  program_generator.py  squat_video_analyzer.py
app/infrastructure/db/: sqlite.py
app/infrastructure/llm/: __init__.py  chat_client.py
app/infrastructure/repositories/: in_memory.py  sqlite.py
app/infrastructure/video/: __init__.py  pipeline.py
docs/: system-design-blueprint.md
frontend/: app.js  index.html  styles.css
