[project]
name = "mypowercoach"
version = "0.1.0"
description = "Adaptive powerlifting coaching backend for myPowerCoach."
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "mediapipe>=0.10.14,<1.0.0",
    "numpy>=2.1.0,<3.0.0",
    "opencv-python>=4.10.0,<5.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
